Veri Tabanı Oluşturuldu

--- a/NTierSardırımRes.DAL/NTierSardırımRes.DAL.csproj
+++ b/NTierSardırımRes.DAL/NTierSardırımRes.DAL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NTierSardırımRes.Entities\NTierSardırımRes.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
