--- a/NTierSardırımRes.MVC/appsettings.json
+++ b/NTierSardırımRes.MVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MyConnection": "server =YSMNTKMK\\SQLEXPRESS;Database=SardirimDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
