--- a/NTierSardırımRes.MVC/NTierSardırımRes.MVC.csproj
+++ b/NTierSardırımRes.MVC/NTierSardırımRes.MVC.csproj
@@ -6,4 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NTierSardırımRes.BLL\NTierSardırımRes.BLL.csproj" />
+    <ProjectReference Include="..\NTierSardırımRes.IOC\NTierSardırımRes.IOC.csproj" />
+  </ItemGroup>
+
 </Project>
