--- a/NTierSardırımRes.DAL/NTierSardırımRes.DAL.csproj
+++ b/NTierSardırımRes.DAL/NTierSardırımRes.DAL.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NTierSardırımRes.Common\NTierSardırımRes.Common.csproj" />
     <ProjectReference Include="..\NTierSardırımRes.Entities\NTierSardırımRes.Entities.csproj" />
   </ItemGroup>
 
