Cookie işlemleri ve Email sender işlemleri

--- a/NTierSardırımRes.Common/NTierSardırımRes.Common.csproj
+++ b/NTierSardırımRes.Common/NTierSardırımRes.Common.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NuGet.Protocol" Version="6.6.1" />
+  </ItemGroup>
+
 </Project>
