--- a/NTierSardırımRes.Entities/NTierSardırımRes.Entities.csproj
+++ b/NTierSardırımRes.Entities/NTierSardırımRes.Entities.csproj
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.PowerBI.Api" Version="4.18.0" />
   </ItemGroup>
 
 </Project>
