Veri Tabanı Güncellendi

--- a/NTierSardırımRes.MVC/appsettings.json
+++ b/NTierSardırımRes.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyConnection": "server = YSMNTKMK\\SQLEXPRESS ;Database=SardirimDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "MyConnection":"server=YSMNTKMK\\SQLEXPRESS;Database=SardirimDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
