--- a/NTierSardırımRes.Common/NTierSardırımRes.Common.csproj
+++ b/NTierSardırımRes.Common/NTierSardırımRes.Common.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NuGet.Protocol" Version="6.6.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.16" />
+	  <PackageReference Include="NuGet.Protocol" Version="6.6.1" />
   </ItemGroup>
 
   <ItemGroup>
